# caps

./: .gitignore  .pre-commit-config.yaml  BRAND.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  INTEGRATIONS.md  README.md  ROADMAP.md  SCENARIOS.md  conftest.py  license.txt  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  linters.yml  release.yml
caps/: __init__.py  api.py  api_admin.py  api_dashboard.py  api_delegation.py  api_groups.py  api_impersonation.py  api_integrations.py  api_policies.py  api_rate_limits.py  api_requests.py  api_snapshots.py  api_tenancy.py  api_transfer.py  api_visual.py  boot.py  cache_invalidation.py  demo.py  exceptions.py  gate.py  hooks.py  hooks_integration.py  install.py  modules.txt  notifications.py  overrides.py  performance.py  policy_engine.py  rate_limiter.py  seed.py  settings_helper.py  tasks.py
caps/api/: __init__.py  response.py
caps/caps/: __init__.py  capability.json  capability_bundle.json  gate.py  role_capability_map.json
caps/caps_integration/: __init__.py  gate.py
caps/desktop_icon/: caps.json
caps/help/: _meta.json
caps/services/: __init__.py  (+4 more)
docs/: ADMIN_GUIDE.md  AI_CONTEXT.md  API_REFERENCE.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DEVELOPER_GUIDE.md  FAQ.md  INTEGRATION_PROMPT.md  PERSONAS.md  README.md  SALES_PITCH.md  SALES_PLAYBOOK.md  TRAINING.md  USER_GUIDE.md
wiki/: API-Reference.md  Architecture.md  Deployment.md  DocTypes-Reference.md  FAQ.md  Getting-Started.md  Home.md  Permissions.md  Translation-Guide.md
(+217 files in other folders)
